crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_recursive_pure_fn_without_match.rs
/*@
fn len(xs: List<i32>) -> i32 {
    1i32 + len(xs)
}
*/

fn main() {}
